Less fragile URL resolution